# Linn

./: .gitignore  Cargo.toml  DEVELOPMENT.md  LIST_DETAIL_COMPONENT.md  PROGRESS.md  PROJECT_STRUCTURE.md  README.md  build.rs  dump.rdb  heaptrack.cargo.257460.zst  heaptrack.cargo.257997.zst  meson.build  ncm-api.md  org.ljyh.linn.json
.claude/skills/relm4-gui/: SKILL.md
data/: gschemas.compiled  icons.gresource.xml  io.github.ljyh223.Linn.desktop  io.github.ljyh223.Linn.gschema.xml  io.github.ljyh223.Linn.metainfo.xml  org.ljyh.linn.gschema.xml  org.ljyh.linn.metainfo.xml
docs/tour/: main.rs
relm4_llm_knowledge/: README.md
relm4_llm_knowledge/00_rules/: usage_principles.md
relm4_llm_knowledge/01_core_concepts/: component.md  model_msg.md  update_flow.md  view_macro.md  widgets.md
relm4_llm_knowledge/02_component_types/: async_component.md  component.md  factory_component.md  worker.md
relm4_llm_knowledge/03_patterns/: child_components.md  commands_async.md  list_factory.md  tracker_pattern.md
relm4_llm_knowledge/04_examples/: async.rs  factory.rs  simple.rs  worker.rs
relm4_llm_knowledge/90_ignored/: ci.md  cli.md  migrations.md
src/: app.rs  db.rs  main.rs  pages.rs  style.css
src/api/: album.rs  artist.rs  client.rs  comment.rs  lyric.rs  mod.rs  model.rs  ncm.rs  playlist.rs  recommend.rs  song.rs  user.rs  utils.rs
src/async_image/: Cargo.toml
src/async_image/src/: async_image.rs  lib.rs  main.rs  mod.rs
src/components/: async_image.rs  list_detail.rs  mod.rs  navigation.rs
src/models/: mod.rs  playlist.rs  song.rs  sorting.rs
src/pages/: collection.rs  daily_recommend.rs  discover.rs  favorites.rs  liked_songs.rs  mod.rs  page.rs  playlist_detail.rs  playlist_songs.rs  recommend.rs
src/pages/playlist_detail/: component.rs  mod.rs  model.rs  msg.rs  song_item.rs
src/player/: backend.rs  engine.rs  facade.rs  messages.rs  mod.rs  mpris.rs  player.rs  queue.rs
src/services/: image_cache.rs  mod.rs  playlist.rs  song.rs
src/theme/: colors.rs
src/ui/: about.rs  artist.rs  collection.rs  comments.rs  content.rs  discover.rs  explore.rs  fullscreen_lyric.rs  header.rs  home.rs  lyric.rs  mod.rs  player.rs  playlist_detail.rs  queue.rs  route.rs  setting.rs  sidebar.rs  window.rs
src/ui/components/: artist_dialog.rs  async_image.rs  collect_dialog.rs  icons.rs  interlude_dots.rs  lyric_line.rs  lyric_widget.rs  mod.rs  playlist_card.rs  song_card.rs  song_list.rs  spring.rs  track_row.rs
src/ui/components/artist/: album_grid.rs  mod.rs  mv_grid.rs  song_list.rs
src/ui/components/gl_bg/: control_points.rs  fallback.rs  mesh_renderer.rs  mod.rs  shaders.rs
src/ui/components/image/: async_image.rs  async_image_builder.rs  border_radius.rs  image_cache.rs  image_manager.rs  imp.rs  macros.rs  mod.rs  shimmer.rs  widget.rs
src/ui/layouts/: grid_layout.rs  mod.rs
src/ui/model/: lyric.rs  mod.rs  playlist.rs
src/ui/views/: content.rs  mod.rs  sidebar.rs
src/utils/: async_utils.rs  image.rs  image_cache.rs  image_size.rs  lyric_parse.rs  mod.rs  palette.rs  utils.rs
src/widgets/: mod.rs  navigation.rs  player_bar.rs
