

[package]
name = "gtk4_linn"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
async-std = { version = "1.13.2", features = ["attributes"] }
dirs = "6.0.0"
isahc = "1.7.2"
moka = { version = "0.12.13", features = ["future"] }

ncm-api-rs = "0.1"
once_cell = "1.21.3"
tokio = { version = "1.49.0", features = ["fs", "io-util", "macros", "rt", "rt-multi-thread", "time" ,"full"] }


gst = { package = "gstreamer", version = "0.24", features = ["log", "v1_26"] }
gst-audio = { package = "gstreamer-audio", version = "0.24", features = ["v1_26"] }
gst-play = { package = "gstreamer-play", version = "0.24", features = ["v1_26"] }
relm4 = { version = "0.11.0", features = ["adw","css","gnome_49"],"macros"}
relm4-components = {version = "0.11.0", features = ["libadwaita"]}
relm4-icons = "0.11.0"
log = "0.4"
env_logger = "0.11"

[build-dependencies]
glib-build-tools = "0.22"
relm4-icons-build = "0.10.1"