

[package]
name = "linn"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
flume = "0.12.0"
strum = { version = "0.28.0", features = ["derive"] }
async-std = { version = "1.13.2", features = ["attributes"] }
dirs = "6.0.0"
isahc = "1.7.2"
moka = { version = "0.12.13", features = ["future"] }

ncm-api-rs = "0.1"
once_cell = "1.21.3"
futures = "0.3.32"
tokio = { version = "1.49.0", features = ["fs", "io-util", "macros", "rt", "rt-multi-thread", "time" ,"full"] }

mpris-server = "0.9"

gst = { package = "gstreamer", version = "0.25.1"}
gst-audio = { package = "gstreamer-audio", version = "0.25.0" }
gst-play = { package = "gstreamer-play", version = "0.25.0" }

tracker = "0.2.2"
relm4 = { version = "0.11.0", features = ["adw","css","gnome_49", "macros"]}
relm4-components = {version = "0.11.0", features = ["libadwaita", "web"]}
relm4-icons = "0.11.0"
log = "0.4"
env_logger = "0.11"
reqwest = "0.13.2"
tokio-util = "0.7.18"
serde_json = "1.0.149"
regex = "1.12.3"
serde = "1.0.228"
pangocairo = "0.22.0"
rand = "0.8"


[build-dependencies]
glib-build-tools = "0.22"
relm4-icons-build = "0.10.1"
