[package]
name = "async_image"
version = "0.1.0"
edition = "2024"

[lib]
name = "async_image"
path = "src/lib.rs"

[dependencies]
gtk4 = {version = "0.10.3", features = ["v4_8"]}
relm4 = { version = "0.10.1", features = ["libadwaita"] }


# 异步运行时
tokio = { version = "1.42", features = ["rt-multi-thread", "macros"] }
# 图片缓存
moka = { version = "0.12", features = ["future"] }
once_cell = "1.20"
# HTTP 客户端
isahc = "1.7"
# 缓存目录
dirs = "5.0"
