[package]
name = "async_image"
version = "0.1.0"
edition = "2024"

[lib]
name = "async_image"
path = "src/lib.rs"

[dependencies]
relm4 = { version = "0.11", features = ["libadwaita"] }

tokio = { version = "1.42", features = ["rt-multi-thread", "macros"] }
moka = { version = "0.12", features = ["future"] }
once_cell = "1.20"
isahc = "1.7"
dirs = "5.0"
